added another register handler call for the get venue method in the init function for venues.go should be last commit for this issue
